--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -57,9 +57,9 @@ jobs:
 
     env:
       Solution_Name: LeetCodeExercises.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: LeetCodeExercises\LeetCodeExercisesTests\LeetCodeExercisesTests.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-      # Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
-      # Wap_Project_Path: your-wap-project-path                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
+      Test_Project_Path: LeetCodeExercises\LeetCodeExercises\LeetCodeExercisesTests\LeetCodeExercisesTests.0.csproj                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+      Wap_Project_Directory: your-wap-project-directory-name    # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
+      Wap_Project_Path: LeetCodeExercises\LeetCodeExercises\bin\Debug\net8.0\                   # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
 
     steps:
     - name: Checkout
